--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -4,9 +4,7 @@
     "skipLibCheck": true,
     "module": "ESNext",
     "moduleResolution": "bundler",
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "moduleDetection": "force"
+    "allowSyntheticDefaultImports": true
   },
-  "include": ["vite.config.ts", "server.js"]
+  "include": ["vite.config.ts"]
 }
