--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 API_KEY=AIzaSyBitZEGlM4lVFiXFG41kHZa1TQUJrKBQVI
 VITE_FACEBOOK_APP_ID=607172899117212
+VITE_CLOUDINARY_CLOUD_NAME=dnnvspssb
+VITE_CLOUDINARY_UPLOAD_PRESET=Nadanaloga
